squash this: fix github connection 15

--- a/frontend/src/components/Modals/Category_MODAL/Category_MODAL.module.css
+++ b/frontend/src/components/Modals/Category_MODAL/Category_MODAL.module.css
@@ -35,7 +35,7 @@
   & .menu_WRAP {
     position: relative;
     overflow-y: scroll;
-    overflox-x: hidden;
+    overflow-x: hidden;
     padding-bottom: var(--mobile-scroll-bottom-padding);
     height: 105%;
   }
