--- a/frontend/src/components/dd/dd.module.css
+++ b/frontend/src/components/dd/dd.module.css
@@ -28,7 +28,7 @@
     transition: 300ms;
     animation: dropdown 300ms forwards;
   
-    &[data-scroll="true"]{overflow-y: scroll};
+    &[data-scroll="true"]{overflow-y: scroll}
     -webkit-scrollbar-track {
       background-color: red;
     }
